--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   font-weight: 700;
   font-style: normal;
   src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_2_0.ttf') format('truetype');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-weight: 400;
   font-style: normal;
   src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_A_0.ttf') format('truetype');
 }
 
 
@@ -28,7 +28,7 @@
   font-weight: 400;
   font-style: italic;
   src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Proxima-Nova/352B80_B_0.ttf') format('truetype');
 }
 /**
  * Typeface: Buenos-Aires
@@ -39,14 +39,14 @@
   font-weight: 300;
   font-style: normal;
   src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Light.ttf') format('truetype');
 }
 @font-face {
   font-family: 'BuenosAires';
   font-weight: 400;
   font-style: normal;
   src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Regular.ttf') format('truetype');
 }
 
 @font-face {
@@ -54,7 +54,7 @@
   font-weight: 700;
   font-style: normal;
   src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.eot');
-  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.eot?#iefix') format('embedded-opentype'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.woff2') format('woff2'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.woff') format('woff'),url('https://cardwise.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.ttf') format('truetype');
+  src: url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.eot?#iefix') format('embedded-opentype'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.woff2') format('woff2'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.woff') format('woff'),url('https://rydoo.github.io/dev-center/fonts/Buenos-Aires/BuenosAiresWeb-Bold.ttf') format('truetype');
 }
 h1,h2,h3,h4,h5{
   font-family: "BuenosAires",'ProximaNova',Helvetica, Arial, sans-serif;
